<resources>
    <string name="app_name">SEAD</string>
    <string name="dummy_content">DEMANDA\nSEAD</string>
    <string name="large_text">
        "Entre com as informações referentes ao destinatário e à demanda."
    </string>
    <string-array name="array_status">
        <item>MUITO LONGO</item>
        <item>LONGO</item>
        <item>MÉDIO</item>
        <item>CURTO</item>
    </string-array>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="error_invalid_email">Endereço de e-mail inválido</string>
    <string name="error_invalid_password">Senha muito curta</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="error_field_required">Esse campo deve ser preenchido</string>
    <string name="permission_rationale">"Contatos."</string>
    <string name="title_activity_scrolling">Criar Demanda</string>
    <string name="fist_title">DEMANDA\nSEAD</string>
    <string name="title_activity_home">SEAD</string>
    <string name="title_activity_login">Entrar</string>
    <string name="title_activity_register">Cadastro Interno</string>
    <string name="title_activity_view_demand"></string>
    <string name="title_activity_status">Demandas</string>
    <string name="title_activity_external_register">Cadastro Externo</string>
    <string name="title_activity_univasf_register">Cadastro Univasf</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="prompt_name">Nome</string>
    <string name="prompt_confirm">Repetir Senha</string>
    <string name="register_category">Posição</string>
    <string name="register_superior">Superior</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_up">Cadastrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="login_register_button">cadastre-se aqui</string>
    <string name="cancel_button">Cancelar</string>
    <string name="postpone_button">Adiar</string>
    <string name="accept_button">Deferir</string>
    <string name="reopen_button">Reabrir</string>
    <string name="reject_button">Indeferir</string>
    <string name="resend_button">Reenviar</string>
    <string name="main_accepted">Deferidas</string>
    <string name="main_cancelled">Canceladas</string>
    <string name="error_send_demand_receiver">Selecione uma das opções sugeridas</string>
    <string name="internet_error">Por favor conecte-se à internet!</string>
    <string name="position_error">Esta posição ainda não possui superiorId</string>
    <string name="server_error">Erro no servidor. Por favor tente mais tarde.</string>
    <string name="send_demand_error">Erro ao enviar demanda. Por favor tente mais tarde.</string>
    <string name="send_demand_success">Demanda enviada com sucesso.</string>
    <string name="rejected_demands">Indeferidas</string>
    <string name="accepted_demands">Deferidas</string>
    <string name="canceled_demands">Canceladas</string>
    <string name="done_demands">Concluídas</string>
    <string name="postponed_demands">Adiadas</string>
    <string name="action_settings">Sair</string>
    <string name="archived_demands_item">Arquivadas</string>
    <string name="admin_drawer_menu">Administrador</string>
    <string name="nav_system_section">Sistema</string>
    <string name="settings">Configurações</string>
    <string name="logout">Sair</string>
    <string name="register_univasf_sector">Setor</string>
    <string name="register_job_title">Cargo</string>
    <string name="univasf_register_text">Ambiente destinado aos/às colaboradore(a)s interno(a)s à UNIVASF e externo(a)s à SEAD.</string>
    <string name="login_internal_text" translatable="false">Colaborador(a) interno(a) da <b>SEAD</b> e ainda não tem registro?</string>
    <string name="login_univasf_text">Colaborador(a) da <b>UNIVASF</b> e ainda não tem registro?</string>
    <string name="login_external_text">Não é colaborador(a) da SEAD nem da UNIVASF?</string>
    <string name="privacy_policy_title">Política de Privacidade</string>
    <string name="privacy_policy_subtitle">Demanda SEAD</string>
    <string name="privacy_policy_introduction">Esta Política de Privacidade rege o uso que você faz da aplicação de software Demanda SEAD (\"Aplicativo\") para dispositivos móveis criado pela SEaD - UNIVASF. O aplicativo é um gerenciador de demandas, onde é possível criar uma conta como colaborador para enviar e receber demandas, interagir e acompanhar seu processamento dentro do grupo de trabalho. Para entrar no sistema, o usuário deverá ser liberado por um colaborador, que foi previamente escolhido por ele mesmo como seu administrador.</string>
    <string name="privacy_policy_section_title_1">Quais são as informações que o Aplicativo obtém e como são usadas?</string>
    <string name="privacy_policy_section_title_2">Informações Fornecidas pelo Usuário</string>
    <string name="privacy_policy_section_text_2">O Aplicativo obtém as informações fornecidas quando você faz o download e registra uma conta. O registro conosco é obrigatório para poder usar os recursos básicos do Aplicativo. Quando você se registra conosco e usa o Aplicativo, você geralmente fornece (a) seu nome, endereço de e-mail, número de telefone, nome de usuário, senha e outras informações de registro; (b) informações que você nos fornece quando nos contata para obter ajuda; (c) informações inseridas em nosso sistema ao usar o Aplicativo, como informações de contato e informações de gerenciamento de projetos. Também podemos usar as informações que você nos forneceu para entrar em contato com você de tempos em tempos para fornecer informações importantes e avisos necessários. Além disso, o Aplicativo pode coletar determinadas informações automaticamente, incluindo, mas não limitado-se a, o tipo de dispositivo móvel que você usa, seu ID de dispositivo exclusivo, o endereço IP de seu dispositivo móvel, o sistema operacional de seu dispositivo móvel e informações sobre como você usa o Aplicativo.</string>
    <string name="privacy_policy_section_title_3">O Aplicativo coleta informações precisas de localização em tempo real do dispositivo?</string>
    <string name="privacy_policy_section_text_3">Este aplicativo não coleta informações precisas sobre a localização do seu dispositivo móvel.</string>
    <string name="privacy_policy_section_title_4">Terceiros veem e/ou têm acesso às informações obtidas pelo Aplicativo?</string>
    <string name="privacy_policy_section_text_4">Somente dados anônimos agregados são periodicamente transmitidos para serviços externos para nos ajudar a melhorar o Aplicativo e o nosso serviço. Nós compartilharemos suas informações com terceiros apenas das formas descritas nesta declaração de privacidade.\n\nPodemos divulgar informações fornecidas e coletadas automaticamente pelo usuário:\n a) conforme exigido por lei, como para cumprir uma intimação ou processo legal semelhante;\n b) quando acreditamos de boa fé que a divulgação é necessária para proteger nossos direitos, proteger sua segurança ou a segurança de outras pessoas, investigar fraudes ou responder a uma solicitação do governo;\n c) com nossos prestadores de serviços confiáveis ​​que trabalham em nosso nome, não têm um uso independente das informações que divulgamos a eles e concordamos em aderir às regras estabelecidas nesta declaração de privacidade.\n d) Se a SEaD - UNIVASF estiver envolvido em uma fusão, aquisição ou venda de todos ou de uma parte de seus ativos, você será notificado por e-mail e/ou um aviso destacado em nosso site sobre qualquer alteração na propriedade ou uso dessas informações, bem como quaisquer escolhas que você possa ter em relação a essas informações.</string>
    <string name="privacy_policy_section_title_5">Quais são os meus direitos de exclusão?</string>
    <string name="privacy_policy_section_text_5">Você pode parar toda a coleta de informações pelo Aplicativo facilmente, desinstalando-o. Você pode usar os processos de desinstalação padrão que podem estar disponíveis como parte de seu dispositivo móvel. Você também pode solicitar a exclusão via e-mail, em sead@univasf.edu.br.</string>
    <string name="privacy_policy_section_title_6">Política de Retenção de Dados, Gerenciando Suas Informações</string>
    <string name="privacy_policy_section_text_6">Nós manteremos os dados fornecidos pelo usuário enquanto você usar o aplicativo e por um tempo razoável depois disso. Nós reteremos as informações coletadas automaticamente por tempo indeterminado e, a partir daí, poderemos armazená-las de forma agregada. Se desejar que excluamos os dados de usuário que você forneceu por meio do Aplicativo, entre em contato conosco pelo e-mail sead@univasf.edu.br e responderemos em um tempo razoável. Observe que alguns ou todos os dados fornecidos pelo usuário podem ser necessários para que o aplicativo funcione corretamente.</string>
    <string name="privacy_policy_section_title_7">Crianças</string>
    <string name="privacy_policy_section_text_7">Não utilizamos o Aplicativo para solicitar conscientemente dados de ou para menores de 13 anos. Se um dos pais ou responsável ficar ciente de que seu filho nos forneceu informações sem o consentimento deles, ele deverá entrar em contato conosco em sead@univasf.edu.br Nós excluiremos essas informações de nossos arquivos.</string>
    <string name="privacy_policy_section_title_8">Segurança</string>
    <string name="privacy_policy_section_text_8">Estamos preocupados em proteger a confidencialidade de suas informações. Fornecemos proteções físicas, eletrônicas e processuais para proteger as informações que processamos e mantemos. Por exemplo, limitamos o acesso a essas informações a funcionários e contratados autorizados que precisam conhecer essas informações para operar, desenvolver ou melhorar nosso Aplicativo. Por favor, esteja ciente de que, embora nos empenhemos em fornecer segurança para as informações que processamos e mantemos, nenhum sistema de segurança pode evitar todas as possíveis violações de segurança.</string>
    <string name="privacy_policy_section_title_9">Modificações</string>
    <string name="privacy_policy_section_text_9">Esta Política de Privacidade pode ser atualizada de tempos em tempos por qualquer motivo. Vamos notificá-lo de quaisquer alterações à nossa Política de Privacidade, publicando a nova Política de Privacidade em https://sites.google.com/view/privacy-policy-demand-sead e informando você via e-mail. Recomenda-se que você consulte esta Política de Privacidade regularmente para quaisquer alterações, pois o uso continuado é considerado aprovação de todas as alterações.</string>
    <string name="privacy_policy_section_title_10">Sua Permissão</string>
    <string name="privacy_policy_section_text_10">Ao usar o Aplicativo, você está consentindo com o processamento de suas informações, conforme estabelecido neste Termo de Privacidade agora e conforme alterado por nós. \"Processamento\" significa usar cookies em um computador/dispositivo portátil ou usar ou tocar informações de qualquer maneira, incluindo, mas não se limitando a, coletar, armazenar, excluir, usar, combinar e divulgar informações, todas de tais atividades serão realizadas no Brasil, se você reside fora do Brasil, suas informações serão transferidas, processadas e armazenadas de acordo com os padrões de privacidade do Brasil.</string>
    <string name="privacy_policy_section_title_11">Contate-nos</string>
    <string name="privacy_policy_section_text_11">Se você tiver alguma dúvida sobre privacidade enquanto estiver usando o aplicativo ou tiver dúvidas sobre nossas práticas, entre em contato conosco por e-mail em sead@univasf.edu.br.</string>
    <string name="privacy_policy_accept_text">Aceito os termos da Política de Privacidade</string>
    <string name="privacy_policy_pre_title">Antes de continuar, leia atentamente a nossa Política de Privacidade:</string>
</resources>