<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_archived"
            android:icon="@drawable/ic_archive_white_24dp"
            android:title="@string/archived_demands_item" />
    </group>

    <item android:id="@+id/nav_admin_items" android:title="@string/admin_drawer_menu">
        <menu>
            <item
                android:id="@+id/nav_admin_done"
                android:icon="@drawable/ic_assignment_turned_in_white_24dp"
                android:title="@string/done_demands" />
            <item
                android:id="@+id/nav_admin_accepted"
                android:icon="@drawable/ic_thumb_up_black_24dp"
                android:title="@string/accepted_demands" />
            <item
                android:id="@+id/nav_admin_rejected"
                android:icon="@drawable/ic_thumb_down_black_24dp"
                android:title="@string/rejected_demands" />
            <item
                android:id="@+id/nav_admin_canceled"
                android:icon="@drawable/ic_cancel_black_24dp"
                android:title="@string/canceled_demands" />
            <item
                android:id="@+id/nav_admin_postponed"
                android:icon="@drawable/ic_timer_black_24dp"
                android:title="@string/postponed_demands"/>
        </menu>
    </item>

    <item android:title="@string/nav_system_section">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_directions_run_black_24dp"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
