<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.PrivacyPolicyActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy_pre_title"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/between_text_space"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="@dimen/max_title_size"
                    android:text="@string/privacy_policy_title"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/privacy_policy_subtitle"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/between_text_space"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy_introduction"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/between_text_space"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/privacy_policy_section_title_1"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/between_text_space"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/privacy_policy_section_title_2"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/between_text_space"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy_section_text_2" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/between_text_space"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/privacy_policy_section_title_3"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/between_text_space"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy_section_text_3"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/between_text_space"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/privacy_policy_section_title_4"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/between_text_space"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy_section_text_4"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/between_text_space"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/privacy_policy_section_title_5"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/between_text_space"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy_section_text_5"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/between_text_space"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/privacy_policy_section_title_6"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/between_text_space"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy_section_text_6"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/between_text_space"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/privacy_policy_section_title_7"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/between_text_space"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy_section_text_7"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/between_text_space"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/privacy_policy_section_title_8"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/between_text_space"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy_section_text_8"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/between_text_space"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/privacy_policy_section_title_9"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/between_text_space"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy_section_text_9"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/between_text_space"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/privacy_policy_section_title_10"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/between_text_space"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy_section_text_10"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/between_text_space"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/privacy_policy_section_title_11"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/between_text_space"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy_section_text_11"/>
            </LinearLayout>

            <CheckBox
                android:id="@+id/privacy_policy_accept_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/privacy_policy_accept_text"/>

            <Button
                android:id="@+id/privacy_policy_continue_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:layout_gravity="center"
                android:background="@color/accent"
                android:textColor="@color/white"
                android:text="Continuar"/>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>